--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "cli-simple-calculator",
+  "name": "@raima456/cli-simple-calculator",
   "version": "1.0.0",
   "description": "A simple cli based calculator using inquier",
   "main": "index.js",
   "type": "module",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Raima Qureshi",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "inquirer": "^9.2.16"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.7"
+  }
 }
