--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@raima456/cli-simple-calculator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple cli based calculator using inquier",
   "main": "index.js",
   "type": "module",
-  "bin": "index.js",
+  "bin": {
+    "cli-simple-calculator": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
